--- a/test/src/test.fe_regErrorCB.in
+++ b/test/src/test.fe_regErrorCB.in
@@ -32,10 +32,17 @@
 #  function.
 #
 #  Update Log:
+#        May 04 2016 DHA: Add test in-tree and installed support 
 #        May 19 2009 DHA: Created file.
 #
 
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
+if test "x@LMONPREFIX@" != "x0"; then
+    export LMON_PREFIX=@LMONPREFIX@
+else
+    export LMON_RM_CONFIG_DIR=@RMCONFIGDIR@
+    export LMON_COLOC_UTIL_DIR=@COLOCDIR@
+fi
 export LMON_INVALIDPID_TEST=1
 export LMON_ERROR_CB_TEST=1
 
