--- a/test/src/test.jobsnap_1.in
+++ b/test/src/test.jobsnap_1.in
@@ -30,6 +30,7 @@
 #  Attach the tool to a running program and collect jobsnap data.
 #
 #  Update Log:
+#        May 04 2016 DHA: Add test in-tree and installed support 
 #        Oct 21 2011 DHA: Added dynamic RM detection support.
 #        Mar 06 2009 DHA: Changed bglrm to bgrm
 #        Jun 17 2008 DHA: Created file.
@@ -48,6 +49,12 @@ WAITAMOUNT=$NUMNODES
 SIGNUM=10
 MPI_JOB_LAUNCHER_PATH=@TJLPATH@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
+if test @LMONPREFIX@ -ne 0; then
+    export LMON_PREFIX=@LMONPREFIX@
+else
+    export LMON_RM_CONFIG_DIR=@RMCONFIGDIR@
+    export LMON_COLOC_UTIL_DIR=@COLOCDIR@
+fi
 export JOBSNAP_TEST=1
  
 if test "x$RM_TYPE" = "xRC_slurm" ; then
