--- a/test/src/test.attach_2_uneven.in
+++ b/test/src/test.attach_2_uneven.in
@@ -31,6 +31,7 @@
 #  number of processors per node, and unlock the hang. 
 #
 #  Update Log:
+#        May 04 2016 DHA: Add test in-tree and installed support 
 #        Oct 21 2011 DHA: Added dynamic RM detection support.
 #        Mar 06 2009 DHA: Changed bglrm to bgrm
 #        Dec 14 2008 DHA: configurable NUMNODES
@@ -52,8 +53,13 @@ fi
 
 SIGNUM=10
 MPI_JOB_LAUNCHER_PATH=@TJLPATH@
-export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
+if test "x@LMONPREFIX@" != "x0"; then
+    export LMON_PREFIX=@LMONPREFIX@
+else
+    export LMON_RM_CONFIG_DIR=@RMCONFIGDIR@
+    export LMON_COLOC_UTIL_DIR=@COLOCDIR@
+fi
  
 if test "x$RM_TYPE" = "xRC_slurm" ; then
   WAITAMOUNT=`expr $WAITAMOUNT`
