--- a/test/src/test.attach_3_invalidpid_remote.in
+++ b/test/src/test.attach_3_invalidpid_remote.in
@@ -30,10 +30,17 @@
 #  Attach the tool to a running program and unlock the hang. 
 #
 #  Update Log:
+#        May 04 2016 DHA: Add test in-tree and installed support 
 #        Jun 17 2008 DHA: Created file.
 #
  
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
+if test "x@LMONPREFIX@" != "x0"; then
+    export LMON_PREFIX=@LMONPREFIX@
+else
+    export LMON_RM_CONFIG_DIR=@RMCONFIGDIR@
+    export LMON_COLOC_UTIL_DIR=@COLOCDIR@
+fi
 export FEN_RM_DISTRIBUTED=1
 export LMON_INVALIDPID_TEST=1
 
