--- a/test/src/test.attach_4_detach.in
+++ b/test/src/test.attach_4_detach.in
@@ -31,6 +31,7 @@
 #  and kill the BE daemons.
 #
 #  Update Log:
+#        May 04 2016 DHA: Add test in-tree and installed support 
 #        Aug 02 2012 DHA: Created file.
 #
  
@@ -44,8 +45,13 @@ if test $NUMNODES -lt 20 ; then
 fi
 SIGNUM=10
 MPI_JOB_LAUNCHER_PATH=@TJLPATH@
-export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
+if test "x@LMONPREFIX@" != "x0"; then
+    export LMON_PREFIX=@LMONPREFIX@
+else
+    export LMON_RM_CONFIG_DIR=@RMCONFIGDIR@
+    export LMON_COLOC_UTIL_DIR=@COLOCDIR@
+fi
 export LMON_FE_DETACH_TEST=1
 
 if test "x$RM_TYPE" = "xRC_slurm" ; then
