--- a/test/src/test.attach_4_shutdownbe.in
+++ b/test/src/test.attach_4_shutdownbe.in
@@ -31,6 +31,7 @@
 #  shut down BE daemons .
 #
 #  Update Log:
+#        May 04 2016 DHA: Add test in-tree and installed support 
 #        Jun 05 2012 DHA: Added subtest support
 #        Oct 21 2011 DHA: Added dynamic RM detection support.
 #        Mar 06 2009 DHA: Changed bglrm to bgrm
@@ -59,8 +60,13 @@ if test $NUMNODES -lt 20 ; then
 fi
 SIGNUM=10
 MPI_JOB_LAUNCHER_PATH=@TJLPATH@
-export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
+if test "x@LMONPREFIX@" != "x0"; then
+    export LMON_PREFIX=@LMONPREFIX@
+else
+    export LMON_RM_CONFIG_DIR=@RMCONFIGDIR@
+    export LMON_COLOC_UTIL_DIR=@COLOCDIR@
+fi
 export LMON_FE_SHUTDOWNBE_TEST=1
 
 if test "x$RM_TYPE" = "xRC_slurm" ; then
