--- a/test/src/test.launch_1_remote.in
+++ b/test/src/test.launch_1_remote.in
@@ -33,6 +33,7 @@
 #  engine remotely on a node in which the job launcher process runs.
 #
 #  Update Log:
+#        May 04 2016 DHA: Add test in-tree and installed support 
 #        Oct 21 2011 DHA: Added dynamic RM detection support.
 #        Mar 06 2009 DHA: Changed bglrm to bgrm
 #        Dec 14 2008 DHA: configurable NUMNODES
@@ -41,13 +42,18 @@
 
 export RM_TYPE=@TEST_RMTP@
 export MPI_JOB_LAUNCHER_PATH=@TJLPATH@
-export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
+if test "x@LMONPREFIX@" != "x0"; then
+    export LMON_PREFIX=@LMONPREFIX@
+else
+    export LMON_RM_CONFIG_DIR=@RMCONFIGDIR@
+    export LMON_COLOC_UTIL_DIR=@COLOCDIR@
+fi
 
 NUMNODES=2
 NOHUP=""
 
-if test "x$RM_TYPE" = "xRC_bglrm" -o "x$RM_TYPE" = "xRC_bgprm" -o "x$RM_TYPE" = "xRC_bgqrm" -o "x$RM_TYPE" = "xRC_bgq_slurm; then
+if test "x$RM_TYPE" = "xRC_bglrm" -o "x$RM_TYPE" = "xRC_bgprm" -o "x$RM_TYPE" = "xRC_bgqrm" -o "x$RM_TYPE" = "xRC_bgq_slurm"; then
   echo "[LMON FE] until mpirun -partition option is fixed this test is disabled on BlueGene"
   exit 1
   NOHUP=nohup
