--- a/test/src/test.launch_2_uneven.in
+++ b/test/src/test.launch_2_uneven.in
@@ -31,15 +31,22 @@
 #  one daemon per node, which unlock the initial hang of all tasks.
 #
 #  Update Log:
+#        May 04 2016 DHA: Add test in-tree and installed support 
 #        Oct 21 2011 DHA: Added dynamic RM detection support.
 #        Mar 06 2009 DHA: Changed bglrm to bgrm
 #        Dec 14 2008 DHA: configurable NUMNODES
 #        Jun 13 2008 DHA: Created file.
 #
+
 export RM_TYPE=@TEST_RMTP@
 export MPI_JOB_LAUNCHER_PATH=@TJLPATH@
-export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
+if test "x@LMONPREFIX@" != "x0"; then
+    export LMON_PREFIX=@LMONPREFIX@
+else
+    export LMON_RM_CONFIG_DIR=@RMCONFIGDIR@
+    export LMON_COLOC_UTIL_DIR=@COLOCDIR@
+fi
 
 NUMNODES=@NNODES@
 NOHUP=""
