Cray support: Added Cray XE/XK/XC support
Adapt Cray's @agontarek PR #7 to the HEAD of the master branch.

Thus, the contributor of this patch is actually Cray's @agontarek.

- ChangeLog - Added change notes.
- config/x_ac_platform.m4 - Fixed bugs/added updated support for Cray.
- configure.ac - Added pkg-config check. Newer Cray systems use pkg-config to retrieve alps dependencies.
- launchmon/src/linux/sdbg_linux_launchmon.cxx - Fixed misplaced brace bug, added support for Cray on demand MPIR proctable acquisition.
- launchmon/src/rm_alps.conf - Updated Cray RM config.
- launchmon/src/sdbg_rm_map.cxx - Added Cray support.
- launchmon/src/sdbg_rm_map.hxx - Added Cray support.
- tools/alps/src/Makefile.am - Updated Cray support.
- tools/alps/src/alps_fe_colocator.cxx - Updated Cray support.

--- a/configure.ac
+++ b/configure.ac
@@ -29,6 +29,7 @@ dnl ----------------------------------------------------------------------------
 dnl
 dnl   Update Log:
 dnl         Apr 28 2016 DHA: Modernize autotool support 
+dnl         Feb 20 2015 andrewg@cray.com: Added Cray support.
 dnl         Apr 30 2014 DHA: Declare 1.0.1 -- this doesn't have Cray support though.
 dnl         Apr 15 2014 DHA: Drop tools/cobo/test
 dnl         Mar 10 2014 MPL: Add secure handshake
@@ -77,6 +78,12 @@ AC_CONFIG_SRCDIR([configure.ac])
 AC_CONFIG_HEADER([config.h])
 dnl config.guess and config.sub must be distributed 
 AC_CANONICAL_SYSTEM
+
+dnl
+dnl Check for pkg-config
+dnl
+PKG_PROG_PKG_CONFIG
+
 
 dnl -----------------------------------------------
 dnl Automake support
