--- a/test/src/test.launch_1_remote.in
+++ b/test/src/test.launch_1_remote.in
@@ -63,6 +63,11 @@ if test "x$RM_TYPE" = "xalps" ; then
   echo "[LMON FE] this test is disabled on CRAY ALPS"
   exit 1
 fi
+if test "x$RM_TYPE" = "xintel_hydra" ; then
+  echo "[LMON FE] this test is disabled for Intel mpiexec.hydra"
+  exit 1
+fi
+
 
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 
