added openrte as valid RM for powerpc

--- a/etc/rm_info.conf
+++ b/etc/rm_info.conf
@@ -54,9 +54,11 @@ rm_bgprm.conf
 rm_bgqrm.conf
 rm_bgq_slurm.conf
 rm_mchecker.conf
+rm_openrte.conf
 
 [linux-power64]
 rm_bgqrm.conf
 rm_bgq_slurm.conf
 rm_mchecker.conf
 rm_gupc.conf
+rm_openrte.conf
