run simple tests through travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: c
 
-sudo: false
+cache:
+  directories:
+    - $HOME/openmpi-gcc
+    - $HOME/openmpi-clang
+
+sudo: required
 
 compiler:
   - gcc
   - clang
-  - gcc+install
 
 addons:
   apt:
@@ -13,14 +17,40 @@ addons:
     packages:
       - libelf-dev
       - libboost-dev
-      - libopenmpi-dev
       - munge
 
-before_install:
-  - case "$CC" in *+install)  CC=${CC//+*}; export TEST_INSTALL=it;; esac
+env:
+  global:
+    - export PATH=./:$HOME/openmpi/bin:$PATH
+    - export LD_LIBRARY_PATH=$HOME/openmpi/lib:$LD_LIBRARY_PATH
+
+install:
+  # This should all be cached, so only run commands below when we want to update the cache
+#  - export VERBOSE=1
+#  - export V=1
+#  # Download and install OpenMPI v2.0.2
+#  - pushd $HOME/build
+#  - wget https://www.open-mpi.org/software/ompi/v2.0/downloads/openmpi-2.0.2.tar.gz
+#  - tar xf openmpi-2.0.2.tar.gz
+#  - cd openmpi-2.0.2
+#  - ./configure --prefix=$HOME/openmpi-$CC
+#  - make && make install
+#  - popd
 
 script:
- - export MAKECMDS="make -j3 && make -j3 check"
- - if test "x${TEST_INSTALL}" = "xit"; then ARGS="--prefix=$HOME/local --with-test-installed"; MAKECMDS="make -j3 && make install && make -j3 check"; fi
+ - export PATH=./:$HOME/openmpi-$CC/bin:$PATH
+ - export LD_LIBRARY_PATH=$HOME/openmpi-$CC/lib:$LD_LIBRARY_PATH
  - ./bootstrap && mkdir build && cd build 
- - ../configure ${ARGS} --with-test-rm=orte --with-test-ncore-per-CN=2 && eval ${MAKECMDS}
+ - ../configure --prefix=$HOME/local  --with-test-rm=orte --with-test-installed  --with-test-rm-launcher=$HOME/openmpi-$CC/bin/mpirun --with-test-ncore-per-CN=2 --with-test-nnodes=1
+ - make -j3
+ - make install
+ - make -j3 check
+ - echo 0 | sudo tee /proc/sys/kernel/yama/ptrace_scope
+ - cd test/src
+ - cat test.launch_1
+ - ./test.launch_1
+ - sleep 60
+ - cat test.attach_1
+ - ./test.attach_1
+ - sleep 60
+ - echo 'done'
