Intel MPI daemons should be launched with mpirun

--- a/etc/rm_intel_hydra.conf
+++ b/etc/rm_intel_hydra.conf
@@ -48,7 +48,7 @@ RM=intel_hydra
 RM_MPIR=STD
 RM_launcher=mpiexec.hydra
 RM_launcher_id=RM_launcher|sym|i_mpi_hyd_cr_init
-RM_launch_helper=mpiexec.hydra
+RM_launch_helper=mpirun
 RM_signal_for_kill=SIGINT|SIGINT
 RM_fail_detection=true
 RM_launch_str=-f %l -n %n -ppn 1 %d %o --lmonsharedsec=%s --lmonsecchk=%c
