moving intel hydra to mpiexec hydra

--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -45,7 +45,7 @@ etc_SCRIPTS = \
   rm_mchecker.conf \
   rm_openrte.conf \
   rm_slurm.conf \
-  rm_intel_hydra.conf
+  rm_mpiexec_hydra.conf
 
 EXTRA_DIST = \
   rm_info.conf \
@@ -58,5 +58,5 @@ EXTRA_DIST = \
   rm_mchecker.conf \
   rm_openrte.conf \
   rm_slurm.conf \
-  rm_intel_hydra.conf
+  rm_mpiexec_hydra.conf
 
