--- a/etc/rm_info.conf
+++ b/etc/rm_info.conf
@@ -45,7 +45,7 @@ rm_slurm.conf
 rm_openrte.conf
 rm_alps.conf
 rm_mchecker.conf
-rm_intel_hydra.conf
+rm_mpiexec_hydra.conf
 rm_gupc.conf
 
 [linux-power]
