--- a/etc/rm_mpiexec_hydra.conf
+++ b/etc/rm_mpiexec_hydra.conf
@@ -1,6 +1,6 @@
 ## $Header: $
 ##
-## rm_intel_hydra.conf
+## rm_mpiexec_hydra.conf
 ##
 ##--------------------------------------------------------------------------------
 ## Copyright (c) 2008, Lawrence Livermore National Security, LLC. Produced at
@@ -44,11 +44,12 @@
 ## RM_launch_str= options and arguements used for RM_launch_mth.
 ##
 
-RM=intel_hydra
+RM=mpiexec_hydra
 RM_MPIR=STD
 RM_launcher=mpiexec.hydra
-RM_launcher_id=RM_launcher|sym|i_mpi_hyd_cr_init
-RM_launch_helper=mpirun
+RM_launcher_id=RM_launcher|sym|HYD_server_info
+RM_launcher_id=RM_launcher|sym|HYD_sock_init
+RM_launch_helper=mpiexec.hydra
 RM_signal_for_kill=SIGINT|SIGINT
 RM_fail_detection=true
 RM_launch_str=-f %l -n %n -ppn 1 %d %o --lmonsharedsec=%s --lmonsecchk=%c
