--- a/etc/rm_mpiexec_hydra.conf
+++ b/etc/rm_mpiexec_hydra.conf
@@ -49,7 +49,7 @@ RM_MPIR=STD
 RM_launcher=mpiexec.hydra
 RM_launcher_id=RM_launcher|sym|HYD_server_info
 RM_launcher_id=RM_launcher|sym|HYD_sock_init
-RM_launch_helper=mpiexec.hydra
+RM_launch_helper=mpirun
 RM_signal_for_kill=SIGINT|SIGINT
 RM_fail_detection=true
 RM_launch_str=-f %l -n %n -ppn 1 %d %o --lmonsharedsec=%s --lmonsecchk=%c
