Added CTI and aarch64 changes
1. Added Cray Inc. contributed changes for both Cray Tools Interface (CTI)
support and base support for aarch64 systems.

2. Removed cobo test Makefile.in.

3. A few minor changes from code review.

--- a/config.h.in
+++ b/config.h.in
@@ -242,6 +242,9 @@
 /* Define 1 for SUB_ARCH_BGQ */
 #undef SUB_ARCH_BGQ
 
+/* Define 1 for SUB_ARCH_CRAY */
+#undef SUB_ARCH_CRAY
+
 /* Define os-isa string */
 #undef TARGET_OS_ISA_STRING
 
