--- a/configure.ac
+++ b/configure.ac
@@ -29,6 +29,7 @@ dnl ----------------------------------------------------------------------------
 dnl
 dnl   Update Log:
 dnl         Apr 28 2016 DHA: Modernize autotool support 
+dnl         Apr 01 2015 ADG/KMD: Added Cray CTI support.
 dnl         Feb 20 2015 andrewg@cray.com: Added Cray support.
 dnl         Apr 30 2014 DHA: Declare 1.0.1 -- this doesn't have Cray support though.
 dnl         Apr 15 2014 DHA: Drop tools/cobo/test
@@ -292,6 +293,7 @@ AC_CONFIG_FILES([
   tools/cobo/src/Makefile
   tools/alps/Makefile
   tools/alps/src/Makefile
+  tools/cti/Makefile
   tools/handshake/Makefile
   launchmon/Makefile
   launchmon/src/Makefile
