--- a/etc/rm_slurm.conf
+++ b/etc/rm_slurm.conf
@@ -30,6 +30,7 @@
 ##  Update Log:
 ##        Sep 30 2011 DHA: Created file.
 ##        Feb 02 2016 GLL: Added sattach.
+##        May 18 2018 ADG: Modified launch string to avoid requesting resources.
 ##
 ##
 ## RM: the name of Resource Manager
@@ -58,5 +59,5 @@ RM_jobid=RM_launcher|sym|totalview_jobid|string
 RM_launch_helper=srun
 RM_signal_for_kill=SIGINT|SIGINT
 RM_fail_detection=true
-RM_launch_str=--input=none --jobid=%j --nodes=%n --ntasks=%n --nodelist=%l %d %o --lmonsharedsec=%s --lmonsecchk=%c
+RM_launch_str=--input=none --gres=none --mem-per-cpu=0 --jobid=%j --nodes=%n --ntasks=%n --nodelist=%l %d %o --lmonsharedsec=%s --lmonsecchk=%c
 
