--- a/etc/rm_ibm_spectrum.conf
+++ b/etc/rm_ibm_spectrum.conf
@@ -1,6 +1,6 @@
 ## $Header: $
 ##
-## rm_info.conf
+## rm_ibm_spectrum.conf
 ##
 ##--------------------------------------------------------------------------------
 ## Copyright (c) 2008, Lawrence Livermore National Security, LLC. Produced at
@@ -28,51 +28,27 @@
 ##--------------------------------------------------------------------------------
 ##
 ##  Update Log:
-##        Sep 30 2011 DHA: Created file.
-##        Apr 01 2015 ADG: Added CTI support.
-##        Mar 01 2018 KMD: Added aarch64 support
+##        Apr 17 2018 DHA: Created file.
 ##
 ##
-## [platform]
-## config file for each supported RM
+## RM: the name of Resource Manager
+## RM_launcher: the name of the launcher command
+## RM_launcher_id: the rule to get the launcher id 
+## (e.g., RM_launcher|sym|srun says the launcher is identify by testing 
+##        RM_launcher's symbol by the name of srun)
+## RM_jobid: the rule to get the target jobid
+## (e.g., RM_jobid=RM_launcher|sym|totalview_jobid|string says
+##        jobid can be obtained from the launcher's symbol, totalview_jobid,
+##        interpreting that as the string type.
+## RM_launcher_helper= method or command to launch daemons
+## RM_launch_str= options and arguements used for RM_launch_mth.
 ##
 
-[linux-x86]
-rm_slurm.conf
-rm_openrte.conf
-rm_mchecker.conf
-
-[linux-x86_64]
-rm_slurm.conf
-rm_openrte.conf
-rm_alps.conf
-rm_cray.conf
-rm_mchecker.conf
-rm_mpiexec_hydra.conf
-rm_gupc.conf
-
-[linux-aarch64]
-rm_slurm.conf
-rm_openrte.conf
-rm_alps.conf
-rm_cray.conf
-rm_mchecker.conf
-rm_gupc.conf
-
-[linux-power]
-rm_bglrm.conf
-rm_bgprm.conf
-rm_bgqrm.conf
-rm_bgq_slurm.conf
-rm_mchecker.conf
-rm_openrte.conf
-
-[linux-power64]
-rm_bgqrm.conf
-rm_bgq_slurm.conf
-rm_mchecker.conf
-rm_gupc.conf
-rm_openrte.conf
-
-[linux-powerle]
-rm_ibm_spectrum.conf
+RM=spectrum
+RM_MPIR=STD_COLOC_FIFO
+RM_launcher=jsrun
+RM_launcher_id=RM_launcher|sym|jsm_env_get_jsrun_port
+RM_launch_helper=mpir
+RM_signal_for_kill=SIGINT
+RM_fail_detection=false
+RM_launch_str=%o --lmonsharedsec=%s --lmonsecchk=%c
