--- a/etc/rm_flux.conf
+++ b/etc/rm_flux.conf
@@ -1,9 +1,9 @@
 ## $Header: $
 ##
-## rm_info.conf
+## rm_flux.conf
 ##
 ##--------------------------------------------------------------------------------
-## Copyright (c) 2008, Lawrence Livermore National Security, LLC. Produced at
+## Copyright (c) 2020, Lawrence Livermore National Security, LLC. Produced at
 ## the Lawrence Livermore National Laboratory. Written by Dong H. Ahn <ahn1@llnl.gov>.
 ## LLNL-CODE-409469. All rights reserved.
 ##
@@ -28,54 +28,29 @@
 ##--------------------------------------------------------------------------------
 ##
 ##  Update Log:
-##        Aug 04 2020 DHA: Added Flux support.
-##        Mar 01 2018 KMD: Added aarch64 support
-##        Apr 01 2015 ADG: Added CTI support.
-##        Sep 30 2011 DHA: Created file.
+##        Aug 11 2020 DHA: Created file.
+##
+## RM: the name of Resource Manager
+## RM_launcher: the name of the launcher command
+## RM_launcher_id: the rule to get the launcher id
+## (e.g., RM_launcher|sym|cmd_attach says the launcher is identify by testing
+##        RM_launcher's symbol by the name of cmd_attach)
+## RM_jobid: the rule to get the target jobid
+## (e.g., RM_jobid=RM_launcher|sym|totalview_jobid|string says
+##        jobid can be obtained from the launcher's symbol, totalview_jobid,
+##        interpreting that as the string type.
+## RM_launcher_helper= method or command to launch daemons
+## RM_launch_str= options and arguements used for RM_launch_mth.
 ##
 ##
-## [platform]
-## config file for each supported RM
-##
 
-[linux-x86]
-rm_slurm.conf
-rm_openrte.conf
-rm_mchecker.conf
-
-[linux-x86_64]
-rm_slurm.conf
-rm_openrte.conf
-rm_alps.conf
-rm_cray.conf
-rm_mchecker.conf
-rm_mpiexec_hydra.conf
-rm_gupc.conf
-rm_flux.conf
-
-[linux-aarch64]
-rm_slurm.conf
-rm_openrte.conf
-rm_alps.conf
-rm_cray.conf
-rm_mchecker.conf
-rm_gupc.conf
-rm_flux.conf
-
-[linux-power]
-rm_bglrm.conf
-rm_bgprm.conf
-rm_bgqrm.conf
-rm_bgq_slurm.conf
-rm_mchecker.conf
-rm_openrte.conf
-rm_flux.conf
-
-[linux-power64]
-rm_bgqrm.conf
-rm_bgq_slurm.conf
-rm_mchecker.conf
-rm_gupc.conf
-rm_openrte.conf
-rm_flux.conf
+RM=flux
+RM_MPIR=STD
+RM_launcher=flux-job
+RM_launcher_id=RM_launcher|sym|cmd_attach
+RM_jobid=RM_launcher|sym|totalview_jobid|string
+RM_launch_helper=flux-helper.sh
+RM_signal_for_kill=SIGINT|SIGINT
+RM_fail_detection=true
+RM_launch_str=--jobid=%j -- %d %o --lmonsharedsec=%s --lmonsecchk=%c
 
