build: Incorporate Flux support into Make

--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -29,6 +29,7 @@
 ##--------------------------------------------------------------------------------
 ##
 ##  Update Log:
+##        Aug 05 2020 DHA: Added Flux support.
 ##        May 18 2018 ADG: Added Cray CTI support
 ##        Apr 28 2016 DHA: Created file.
 ##
@@ -47,7 +48,8 @@ etc_SCRIPTS = \
   rm_mchecker.conf \
   rm_openrte.conf \
   rm_slurm.conf \
-  rm_mpiexec_hydra.conf
+  rm_mpiexec_hydra.conf \
+  rm_flux.conf
 
 EXTRA_DIST = \
   rm_info.conf \
@@ -61,5 +63,6 @@ EXTRA_DIST = \
   rm_mchecker.conf \
   rm_openrte.conf \
   rm_slurm.conf \
-  rm_mpiexec_hydra.conf
+  rm_mpiexec_hydra.conf \
+  rm_flux.conf
 
