--- a/tools/flux/Makefile.am
+++ b/tools/flux/Makefile.am
@@ -3,9 +3,9 @@
 ## Makefile.am -- Process this file with automake to produce Makefile.in
 ##
 ##--------------------------------------------------------------------------------
-## Copyright (c) 2008, Lawrence Livermore National Security, LLC. Produced at
+## Copyright (c) 2020, Lawrence Livermore National Security, LLC. Produced at
 ## the Lawrence Livermore National Laboratory. Written by Dong H. Ahn <ahn1@llnl.gov>.
-## LLNL-CODE-409469. All rights reserved.
+## LLNL-CODE-401141. All rights reserved.
 ##
 ## This file is part of LaunchMON. For details, see
 ## https://computing.llnl.gov/?set=resources&page=os_projects
@@ -28,26 +28,9 @@
 ##--------------------------------------------------------------------------------
 ##
 ##  Update Log:
-##        Aug 11 2020 DHA: Add Flux support
-##        Apr 28 2016 DHA: Modernize build environment:
-##                           Make handshake and cobo mandatory and
-##                           Drop bundling of grypt/gpg packages
-##        Apr 01 2015 ADG: Added Cray CTI support
-##        Mar 10 2014 MPL: Add secure handshake
-##        Dec 16 2009 DHA: Added COBO support
-##        Jun 10 2007 DHA: Copied from the old Makefile.
+##        Aug 11 2020 DHA: File created
 ##
 
-if WITH_CIOD
-  OPT_CIOD = ciod
-endif
-if WITH_ALPS
-  OPT_ALPS = alps
-endif
-if WITH_CTI
-  OPT_CTI = cti
-endif
-  OPT_HANDSHAKE = handshake
 
-SUBDIRS =  handshake cobo flux $(OPT_CIOD) $(OPT_ALPS) $(OPT_CTI)
+bin_SCRIPTS                = flux-helper.sh
 
