--- a/test/src/test.attach_1_mem_fetcher.in
+++ b/test/src/test.attach_1_mem_fetcher.in
@@ -30,6 +30,7 @@
 #  Attach the tool to a running program and unlock the hang.
 #
 #  Update Log:
+#        Aug 12 2020 DHA: Add Flux support.
 #        May 04 2016 DHA: Add test in-tree and installed support
 #        Oct 21 2011 DHA: Added dynamic RM detection support.
 #        Dec 17 2009 DHA: Added minimum WAITAMOUNT
@@ -82,6 +83,11 @@ elif test "x$RM_TYPE" = "xRC_orte" ; then
 elif test "x$RM_TYPE" = "xRC_mpiexec_hydra" ; then
   WAITAMOUNT=`expr $WAITAMOUNT`
   $MPI_JOB_LAUNCHER_PATH -n $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
+elif test "x$RM_TYPE" = "xRC_flux"; then
+  WAITAMOUNT=`expr $WAITAMOUNT`
+  JOBID=$($MPI_JOB_LAUNCHER_PATH mini submit -N $NUMNODES -n $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@)
+  $MPI_JOB_LAUNCHER_PATH job wait-event -t 10 ${JOBID} start
+  $MPI_JOB_LAUNCHER_PATH job attach --debug ${JOBID} &
 else
   echo "This RM is not supported yet"
 fi
