--- a/test/src/test.attach_4_detach.in
+++ b/test/src/test.attach_4_detach.in
@@ -31,6 +31,7 @@
 #  and kill the BE daemons.
 #
 #  Update Log:
+#        Aug 12 2020 DHA: Add Flux support.
 #        May 04 2016 DHA: Add test in-tree and installed support
 #        Aug 02 2012 DHA: Created file.
 #
@@ -75,6 +76,11 @@ elif test "x$RM_TYPE" = "xRC_orte" ; then
 elif test "x$RM_TYPE" = "xRC_mpiexec_hydra" ; then
   WAITAMOUNT=`expr $WAITAMOUNT`
   $MPI_JOB_LAUNCHER_PATH -n $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
+elif test "x$RM_TYPE" = "xRC_flux"; then
+  WAITAMOUNT=`expr $WAITAMOUNT`
+  JOBID=$($MPI_JOB_LAUNCHER_PATH mini submit -N $NUMNODES -n $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@)
+  $MPI_JOB_LAUNCHER_PATH job wait-event -t 10 ${JOBID} start
+  $MPI_JOB_LAUNCHER_PATH job attach --debug ${JOBID} &
 else
   echo "This RM is not supported yet"
 fi
