--- a/etc/rm_slurm.conf.in
+++ b/etc/rm_slurm.conf.in
@@ -59,5 +59,5 @@ RM_jobid=RM_launcher|sym|totalview_jobid|string
 RM_launch_helper=srun
 RM_signal_for_kill=SIGINT|SIGINT
 RM_fail_detection=true
-RM_launch_str=--input=none --gres=none --mem-per-cpu=0 --jobid=%j --nodes=%n --ntasks=%n --nodelist=%l %d %o --lmonsharedsec=%s --lmonsecchk=%c
+RM_launch_str=@SRUN_OVERLAP@--input=none --gres=none --mem-per-cpu=0 --jobid=%j --nodes=%n --ntasks=%n --nodelist=%l %d %o --lmonsharedsec=%s --lmonsecchk=%c
 
