update log messages for srun version check

--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -31,6 +31,7 @@
 ##  Update Log:
 ##        May 18 2018 ADG: Added Cray CTI support
 ##        Apr 28 2016 DHA: Created file.
+##        Aug 13 2021 GLL: use input file for slurm to allow configure-time options
 ##
 
 SUBDIRS = pkg-specs
